# simulat

./: BUGs  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile-png  Doxyfile-svg  Leiame.txt  Makefile  README.md  Readme.md  Readme.org  Simulat-SimuladorTelhaMestrado-v4-GNULinux-2014-Documentado-RedivisaoClasses-ArquivosSeparados-ComGnuplot.kdev4  Simulat-SimuladorTelhaMestrado-v4b-GNULinux-2014-ClassesSeparadas-ComGnuplot.kdev4  TODO  cmake_install.cmake
diagramas_uml/v4a/: Simulat-SimuladorTelhaMestrado-v4.h  diagrama_classe.eps
diagramas_uml/v4b/: CFluido.h  CFuncaoAdsorcao.h  CFuncaoCondutividade.h  CFuncao_wl.h  CFuncoesClima.h  CFuncoesDifusividade.h  CMeioPoroso_Telha.h  CMeioPoroso_Telha_Discretizada_TDMA.h  CSimuladorTelha.h  CSolver_TDMA.h  CTransferenciaCalorMassa.h  diagrama_uml_umbrello.xmi
diagramas_uml/v4c/: diagramas_uml_umbrello.xmi
docs/html/: CFluido_8cpp.xhtml  CFluido_8cpp__incl.map  CFluido_8cpp__incl.md5  CFluido_8h.xhtml  CFluido_8h__dep__incl.map  CFluido_8h__dep__incl.md5  CFluido_8h__incl.map  CFluido_8h__incl.md5  CFluido_8h_source.xhtml  CFuncaoAdsorcao_8cpp.xhtml  CFuncaoAdsorcao_8cpp__incl.map  CFuncaoAdsorcao_8cpp__incl.md5  CFuncaoAdsorcao_8h.xhtml  CFuncaoAdsorcao_8h__dep__incl.map  CFuncaoAdsorcao_8h__dep__incl.md5  CFuncaoAdsorcao_8h__incl.map  CFuncaoAdsorcao_8h__incl.md5  CFuncaoAdsorcao_8h_source.xhtml  CFuncaoAdsorcao__Celso_8cpp.xhtml  CFuncaoAdsorcao__Celso_8cpp__incl.map  CFuncaoAdsorcao__Celso_8cpp__incl.md5  CFuncaoAdsorcao__Celso_8h.xhtml  CFuncaoAdsorcao__Celso_8h__dep__incl.map  CFuncaoAdsorcao__Celso_8h__dep__incl.md5  CFuncaoAdsorcao__Celso_8h__incl.map  CFuncaoAdsorcao__Celso_8h__incl.md5  CFuncaoAdsorcao__Celso_8h_source.xhtml  CFuncaoAdsorcao__Pablo_8cpp.xhtml  CFuncaoAdsorcao__Pablo_8cpp__incl.map  CFuncaoAdsorcao__Pablo_8cpp__incl.md5  CFuncaoAdsorcao__Pablo_8h.xhtml  CFuncaoAdsorcao__Pablo_8h__dep__incl.map  CFuncaoAdsorcao__Pablo_8h__dep__incl.md5  CFuncaoAdsorcao__Pablo_8h__incl.map  CFuncaoAdsorcao__Pablo_8h__incl.md5  CFuncaoAdsorcao__Pablo_8h_source.xhtml  CFuncaoCondutividade_8cpp.xhtml  CFuncaoCondutividade_8cpp__incl.map  CFuncaoCondutividade_8cpp__incl.md5  CFuncaoCondutividade_8h.xhtml  (+881 more)
saida/: grafico_ol.ps  grafico_ti.ps  grafico_tp.ps
src/: CFluido.cpp  CFluido.h  CFuncaoAdsorcao.cpp  CFuncaoAdsorcao.h  CFuncaoAdsorcao_Celso.cpp  CFuncaoAdsorcao_Celso.h  CFuncaoAdsorcao_Pablo.cpp  CFuncaoAdsorcao_Pablo.h  CFuncaoCondutividade.cpp  CFuncaoCondutividade.h  CFuncaoConteudoMassicoWl.cpp  CFuncaoConteudoMassicoWl.h  CFuncaoDifusividade.cpp  CFuncaoDifusividade.h  CFuncoesClima.cpp  CFuncoesClima.h  CGnuplot.h  CInterface.cpp  CInterface.h  CInterface_SimuladorTelha.cpp  CInterface_SimuladorTelha.h  CMakeLists.txt  CMeioPoroso_Telha.cpp  CMeioPoroso_Telha.h  CMeioPoroso_Telha_Discretizada_TDMA.cpp  CMeioPoroso_Telha_Discretizada_TDMA.h  CSimulador_Telha.cpp  CSimulador_Telha.h  CSimulador_Telha_GanhosEnergia.cpp  CSimulador_Telha_GanhosEnergia.h  CSolver_TDMA.cpp  CSolver_TDMA.h  CTermodinamica.cpp  CTermodinamica.h  CTransferenciaCalorMassa.cpp  CTransferenciaCalorMassa.h  Makefile  Simulat-SimuladorTelhaMestrado-v3.cpp.out.saida  Simulat-SimuladorTelhaMestrado-v4  Simulat-SimuladorTelhaMestrado-v4.cpp.out.saida  (+2 more)
(+73 files in other folders)
